* Mon Dec 29 2003 Philip Tellis 0.7.3
- up version number

* Thu Dec 25 2003 Philip Tellis
- asynchronous writes as well (might break file send)
- better support for webcam broadcast
- webcam images sent in chunks rather than as a single image
- check for EAGAIN on send, defer if it is returned
- add handler returns a tag, which is passed to remove handler to remove it
- api has changed

* Wed Dec 10 2003 Philip Tellis
- initialise some unintialised variables

* Tue Dec 9 2003 Philip Tellis
- Yahoo Search - by Konstantin Klyagin - centericq

* Tue Dec 9 2003 Philip Tellis
- Typing notification fix from Gena01
- Don't send VERIFY as first packet, since we don't know what do
do if it fails anyway.
TODO revert when we figure this out

* Wed Oct 22 2003 Philip Tellis
- Identify failed login because of incorrect username

* Wed Oct 8 2003 Philip Tellis
- Fix bug with double processing of format string in error logging
- log_level no longer global, use yahoo_get_log_level() instead (was
only used internally)

* Tue Sep 30 2003 Doug Davis
- chat room logout and error code

* Tue Sep 30 2003 Philip
- fix for auth to work with big endian machines too

* Mon Sep 29 2003 Philip
- attribute new auth to Cerulean studios (which is where gaim got it from)

* Sun Sep 28 2003 Philip 0.7.2-2
- made yahoo_init do what it did before, and renamed the new yahoo_init
to yahoo_init_with_attributes.  This should help not break old code.

* Sun Sep 28 2003 Philip
- changed g_malloc0 to malloc - thanks to Pixador

* Sun Sep 28 2003 Philip 0.7.2
- Auth fixed by Sean Egan (gaim).

* Sat Sep 27 2003 Philip
- Added more fallback ports
- Fix crash in process_auth

* Wed Sep 24 2003 Philip
- Messenger host name changed to scs.msg.yahoo.com

* Mon Sep 22 2003 Philip
- Forgot a strdup

* Sat Sep 20 2003 Philip
- Support protocol 0x0b

* Sat Sep 20 2003 Philip
- Formatting fixes and yahoo_list memory management fixes

* Sat Sep 20 2003 Philip
- No more extern vars (almost)