@@ -1,3 +1,6 @@
+* Fri Jan 16 2003 Alan Humpherys
+- remove_handler also takes client_id
+
 * Wed Jan 14 2003 Doug Davis
 - fix auth
 
