@@ -1,3 +1,9 @@
+* Fri Jan 16 2003 Alan Humpherys
+- remove_handler also takes client_id
+
+* Wed Jan 14 2003 Doug Davis
+- fix auth
+
 * Mon Dec 29 2003 Philip Tellis 0.7.3
 - up version number
 
